# vst-test-playground

./: .gitignore  AGENTS.md  BUILD_EXECUTION_STATUS.md  BUILD_INSTRUCTIONS.txt  CMakeLists.txt  GIT_INSTRUCTIONS.txt  IMPLEMENTATION_COMPLETE.md  LICENSE  QUICKSTART.md  README.md  TECHNICAL_DEBT_ISSUES.md  build_and_test.py  git_commit_push.bat
.github/workflows/: build.yml
Source/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WebView.cpp  WebView.h
Tests/: IntegrationTests.cpp  Main.cpp  ParameterTests.cpp  UIComponentTests.cpp
docs/: CODE_REVIEW.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  QUICKSTART_TESTING.md  README.md  REFERENCE.md  TECHNICAL_DEBT_RESOLUTION.md
docs/guides/: DEVELOPMENT.md  JUCE_SUBMODULE.md  TESTING.md  USER_MANUAL.md  VALIDATION_STEPS.md
docs/implementation-history/: IMPLEMENTATION_SUMMARY.md
source/: PluginEditor.cpp
